--- a/development.html
+++ b/development.html
@@ -50,12 +50,12 @@
         <span class="top"></span>
 
         <video muted autoplay playsinline class="video-background">
-<source src="assets/videos/who-we-are.mp4" type="video/mp4">
+<source src="assets/videos/development.mp4" type="video/mp4">
 <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1"><span class="delay-1">DISTINCT</span><br><span class="green-underline delay-2">VISIONS</span></h1>
+<h1 class="col-10 offset-1"><span class="delay-1">DISTINCT</span><br><span class="green-underline delay-2">VISION</span></h1>
 
         </section>
 
@@ -110,6 +110,9 @@ We are reimagining the role that a workplace plays in the world so that it can w
 
 <section class="featured-projects col-12 col-lg-10 offset-lg-1" id="featured-projects">
 
+  <p class="small-headline col-6">
+  FEATURED PROJECTS
+  </p>
 
 <div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
   <div class="portfolio-list col-12 float-left">
@@ -117,7 +120,7 @@ We are reimagining the role that a workplace plays in the world so that it can w
       <div class="col-12 p-0 portfolio-image-container">
   <img src="assets/images/portfolio/riviera.png" alt="#">
   </div>
-<h3>RIVIERA</h3>
+<h3>THE RIVIERA</h3>
 </a>
 </div>
 </div>
@@ -146,8 +149,8 @@ We are reimagining the role that a workplace plays in the world so that it can w
 </div>
 
 
-<div class="link-container col-10 col-md-8 col-xl-4 offset-1 offset-md-2 offset-xl-4">
-  <a href="portfolio.html" class="link-outline col-12"><p class="col-10">SEE ALL DEVELOPMENT</p>
+<div class="link-container col-10 col-md-8 col-xl-4 offset-1 offset-md-2 offset-xl-0">
+  <a href="portfolio.html" class="link-outline col-12"><p class="col-10">SEE ALL PROJECTS</p>
   <img src="assets/arrow.svg" alt="#" class="col-2">
   </a>
 </div>
