--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Your browser does not support the video tag.
 
 
 
-  <h2 class="is-animated col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">ELEVATING
+  <h2 class="is-animated col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">ELEVATED
 <br>
 <span class="green-underline">EXPERIENCE</span></h2>
 
@@ -88,9 +88,13 @@ As leaders in all industries continue to search for competitive advantages, they
   </div>
 
 <div class="link-container col-10 col-md-8 col-xl-5 offset-1 offset-md-2 offset-xl-5">
-  <a href="who-we-are.html" class="link-outline col-12"><p class="col-10">GET TO KNOW US</p>
+  <a href="who-we-are.html" class="link-outline-2 col-12"><p class="col-10">WHO WE ARE</p>
   <img src="assets/arrow.svg" alt="#" class="col-2">
   </a>
+
+  <a href="management.html" class="col-12 border-bottom link-outline-2"><p class="col-10">WHAT WE DO</p>
+<img src="assets/arrow.svg" alt="management.html" class="col-2">
+    </a>
 </div>
 
 </section>
@@ -127,14 +131,17 @@ Our approach is informed by human values—namely, a desire for health and happi
 
 <section class="featured-projects col-12 col-lg-10 offset-lg-1" id="featured-projects">
 
+<p class="small-headline col-6">
+FEATURED PROPERTIES
+</p>
 
 <div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
   <div class="portfolio-list col-12 float-left">
-    <a href="#">
+    <a href="portfolio-riviera.html">
       <div class="col-12 p-0 portfolio-image-container">
   <img src="assets/images/portfolio/riviera.png" alt="#">
   </div>
-<h3>RIVIERA</h3>
+<h3>THE RIVIERA</h3>
 </a>
 </div>
 </div>
