--- a/push-3.html
+++ b/push-3.html
@@ -13,7 +13,7 @@
   </head>
   <body class="col-12 float-left p-0" id="people">
 
-    <section class="zoom zoom-2 col-12">
+    <section class="zoom zoom-3 col-12">
 
 
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000.001" class="svg2">
@@ -26,12 +26,13 @@
 
         <div class="reveal-container col-10 col-lg-3 offset-1">
         <h2 class="col-12">
-      SPACE SETS<br><span class="turquoise-underline">THE PACE</span>
+      YOUR<br>SPACE SETS<br><span class="turquoise-underline">THE PACE</span>
           </h2>
 
           <p class="col-12">
-Happy employees are productive employees, and productive employees are good for business.  But your space sets the pace. Imagine walking a prospect through a workplace full of creativity, collaboration, and positive energy. A place where it is clear that the employees enjoy their work. These positive vibes lead to more positive feelings for the prospect, which in turn leads to more prospects becoming clients.
-    </p>
+            Happy employees are productive employees, and productive employees are good for business.  But your space sets the pace. Imagine walking a prospect through a workplace full of creativity, collaboration, and positive energy. A place where it is clear that the employees enjoy their work. These positive vibes lead to more positive feelings for the prospect, which in turn leads to more prospects becoming clients.
+
+  </p>
 
 
       </div>
