--- a/what-we-do.html
+++ b/what-we-do.html
@@ -82,7 +82,7 @@ Your browser does not support the video tag.
 
 <div class="copy-container col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-0">
 <p class="col-10 col-md-8 col-lg-12 col-xl-10 offset-1 offset-md-2 offset-lg-0 ">
-As leaders in all industries continue to search for competitive advantages, they continue to overlook the most effective weapon in their arsenal—their workplace. That’s where we come in. We create spaces that people want to come to, not just have to. Dynamic spaces that not only attract today’s brightest talent but also spark motivation, innovation, happiness, and loyalty for years to come.
+We don’t <span class="italic">sell</span> a luxury product — we <span class="italic">deliver</span> a luxury experience. It’s not just about what’s new, but about what matters. Through the design, development, brokerage, and management of world-class workplaces, we deliver a new form luxury and a culture of inclusivity that drives today’s businesses forward.
 </p>
 
 </div>
@@ -127,12 +127,12 @@ As leaders in all industries continue to search for competitive advantages, they
 
   <div class="reveal-container col-10 col-lg-3 offset-1">
   <h2 class="col-12">
-BUILDING<br><span class="turquoise-underline">INSPIRATION</span>
+YOUR SPACE<br><span class="turquoise-underline">SETS THE PACE</span>
     </h2>
 
     <p class="col-12">
-We elevate the workplace to be more reactive to peoples’ expectations of how things can be smarter and more efficient. We demonstrate this through beautifully designed, highly-curated experiential workplaces that inspire people
-
+Happy employees are productive employees, and productive employees are good for business.  But your space sets the pace. Imagine walking a prospect through a workplace full of creativity, collaboration, and positive energy. A place where it is clear that the employees enjoy their work. These positive vibes lead to more positive feelings for the prospect, which in turn leads to more prospects becoming clients.
+</p>
 </div>
 
 </section>
@@ -146,6 +146,9 @@ We elevate the workplace to be more reactive to peoples’ expectations of how t
 
 <section class="featured-projects col-12 col-xl-10 offset-xl-1" id="featured-projects">
 
+  <p class="small-headline col-6">
+  SUCCESS STORIES
+  </p>
 
 <div class="container-p col-10 col-md-4 col-lg-3 col-xl-4 offset-1 offset-xl-0 float-left">
   <div class="portfolio-list col-12 float-left">
