--- a/who-we-are.html
+++ b/who-we-are.html
@@ -64,7 +64,7 @@ Your browser does not support the video tag.
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1"><span class="delay-1">BUILDING</span><br><span class="delay-2 turquoise-underline">THE </span><span class="delay-3 turquoise-underline">FUTURE</span></h1>
+<h1 class="col-10 offset-1"><span class="delay-1">FOCUSED</span><span class="delay-2"> ON</span><br><span class="delay-3 turquoise-underline">THE </span><span class="delay-4 turquoise-underline">FUTURE</span></h1>
         </section>
 
 
@@ -74,10 +74,10 @@ Your browser does not support the video tag.
 
 
 
-  <h2 class="col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">WHERE WE
+  <h2 class="col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">THE PAST IS
     <br>
 
-<span class="green-underline">CAME FROM</span></h2>
+<span class="green-underline">OUR PRIDE</span></h2>
 
 <div class="copy-container col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-0">
 <p class="col-10 col-md-8 col-lg-12 col-xl-10 offset-1 offset-md-2 offset-lg-0 ">
@@ -127,6 +127,10 @@ WHERE<br> WE'RE<br><span class="turquoise-underline">HEADING</span>
 
 
 <span class="top"></span>
+
+<p class="small-headline col-6">
+PILLARS OF SUCCESS
+</p>
 
 
 <div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
