--- a/brokerage.html
+++ b/brokerage.html
@@ -50,7 +50,7 @@
         <span class="top"></span>
 
         <video muted autoplay playsinline class="video-background">
-<source src="assets/videos/who-we-are.mp4" type="video/mp4">
+<source src="assets/videos/brokerage.mp4" type="video/mp4">
 <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
@@ -68,11 +68,11 @@ Your browser does not support the video tag.
 
   <h2 class="col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">LEASING
     <br>
-<span class="green-underline">FASTER</span></h2>
+<span class="green-underline">LIFESTYLE</span></h2>
 
 <div class="copy-container col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-0">
 <p class="col-10 col-md-8 col-lg-12 col-xl-10 offset-1 offset-md-2 offset-lg-0 ">
-Authentic, consistent, and ambitious. That sums up the core principles of our seasoned brokerage team. They are natural relationship-builders, able to inspire trust and build goodwill, often showing up in ways that may be otherwise outside of their job description. They are changemakers, driving a revolution in the industry by leasing the elevated workplace experience faster than any other firm.
+Authentic, consistent, and ambitious. That sums up the core principles of our seasoned brokerage team. They are natural relationship-builders, able to inspire trust and build goodwill, often showing up in ways that may be otherwise outside of their job description. They are changemakers, driving a revolution in the industry, not by leasing square feet, but by leasing a lifestyle.
 </p>
 
 </div>
@@ -103,6 +103,9 @@ Authentic, consistent, and ambitious. That sums up the core principles of our se
 
 <section class="featured-projects col-12 col-lg-10 offset-lg-1" id="featured-projects">
 
+  <p class="small-headline col-6">
+  FEATURED PROPERTIES
+  </p>
 
 <div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
   <div class="portfolio-list col-12 float-left">
@@ -110,7 +113,7 @@ Authentic, consistent, and ambitious. That sums up the core principles of our se
       <div class="col-12 p-0 portfolio-image-container">
   <img src="assets/images/portfolio/riviera.png" alt="#">
   </div>
-<h3>RIVIERA</h3>
+<h3>THE RIVIERA</h3>
 </a>
 </div>
 </div>
@@ -139,7 +142,7 @@ Authentic, consistent, and ambitious. That sums up the core principles of our se
 </div>
 
 
-<div class="link-container col-10 col-md-8 col-xl-4 offset-1 offset-md-2 offset-xl-4">
+<div class="link-container col-10 col-md-8 col-xl-4 offset-1 offset-md-2 offset-xl-0">
   <a href="portfolio.html" class="link-outline col-12"><p class="col-10">SEE ALL LISTINGS</p>
   <img src="assets/arrow.svg" alt="#" class="col-2">
   </a>
