--- a/portfolio.html
+++ b/portfolio.html
@@ -81,49 +81,52 @@
               <ul class="filters col-12 col-lg-8 offset-lg-1 float-left float-left">
                       <li><a href="#" class="filter" data-filter="all">ALL</a></li>
                       <li><a href="#" class="filter" data-filter=".current">CURRENT</a></li>
-                      <li class="margin-left"><a href="#" class="filter" data-filter=".north">NORTH</a></li>
-                      <li><a href="#" class="filter" data-filter=".east">EAST</a></li>
+
+
+                      <li class="margin-left"><a href="#" class="filter" data-filter=".east">EAST</a></li>
                       <li><a href="#" class="filter" data-filter=".west">WEST</a></li>
+                        <li><a href="#" class="filter" data-filter=".south">SOUTH</a></li>
                       <li><a href="#" class="filter" data-filter=".central">CENTRAL</a></li>
+
                     </ul>
 
 
 
             <ul class="containMix portfolio-container col-12 col-lg-10 offset-lg-1 float-left">
 
-            <li class="mix current container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
               <div class="portfolio-list col-12 float-left">
                 <a href="portfolio-beacon.html">
                   <div class="col-12 p-0 portfolio-image-container">
               <img src="assets/images/portfolio/beacon.png" alt="#">
               </div>
             <h3>BEACON I</h3>
-            <p>South Fayette Township</p>
+            <p>South Fayette</p>
             </a>
             </div>
           </li>
 
 
-            <li class="mix current container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="west mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-riviera.html">
+              <a href="portfolio-bentley.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/portfolio/bentley.png" alt="#">
             </div>
             <h3>THE BENTLEY</h3>
-            <p>South Fayette Township</p>
+            <p>Green Tree</p>
             </a>
             </div>
           </li>
 
-            <li class="mix current container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="west mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/portfolio/boardwalk.png" alt="#">
             </div>
             <h3>BOARDWALK</h3>
-            <p>South Fayette Township</p>
+            <p>North Fayette</p>
             </a>
             </div>
           </li>
@@ -131,7 +134,7 @@
 
 
 
-            <li class="mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="west current mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -143,19 +146,19 @@
             </div>
           </li>
 
-            <li class="mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="south current mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/portfolio/piazza.png" alt="#">
             </div>
             <h3>THE PIAZZA</h3>
-            <p>South Fayette Township</p>
+            <p>South Fayette</p>
             </a>
             </div>
           </li>
 
-            <li class="mix current container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="east mix current container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-riviera.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -167,7 +170,7 @@
             </div>
           </li>
 
-            <li class="mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="central current mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -179,7 +182,7 @@
             </div>
           </li>
 
-            <li class="mix current container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
