--- a/push-1.html
+++ b/push-1.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href="css/style.css" type="text/css" rel="stylesheet">
     <link href="css/fonts/stylesheet.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="js/aos.css" />
     <title>Hello, world!</title>
   </head>
   <body class="col-12 float-left p-0" id="people">
@@ -41,9 +43,6 @@ Our approach is informed by human values—namely, a desire for health and happi
       </section>
 
 
-      <script>
-      ScrollReveal().reveal('.reveal-1', { delay: 500 });
-      </script>
 
 
 
