--- a/brokerage.html
+++ b/brokerage.html
@@ -9,6 +9,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href="css/style.css" type="text/css" rel="stylesheet">
     <link href="css/fonts/stylesheet.css" type="text/css" rel="stylesheet">
+
+
+
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+<link rel="manifest" href="favicon/site.webmanifest">
+
+
     <title>Burns Scalo Real Estate</title>
   </head>
   <body>
@@ -33,7 +42,15 @@
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
         <ul class="main-nav col-10 col-lg-6 col-xl-6 offset-1 offset-xl-2">
           <li class="nav-item-1"><a href="who-we-are.html">WHO WE ARE</a></li>
-          <li class="nav-item-2" id="active"><a href="what-we-do.html">WHAT WE DO</a></li>
+          <li class="nav-item-2" id="active"><a href="what-we-do.html">WHAT WE DO</a>
+
+            <ul id="subnav">
+            <li><a href="brokerage.html">BROKERAGE</a></li>
+            <li class="sub-2"><a href="development.html">DEVELOPMENT</a></li>
+            <li class="sub-3"><a href="management.html">MANAGEMENT</a></li>
+            </ul>
+          </li>
+
           <li class="nav-item-3"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
 
