--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
         <ul class="main-nav col-10 col-lg-6 col-xl-6 offset-1 offset-xl-2">
           <li class="nav-item-1"><a href="who-we-are.html">WHO WE ARE</a></li>
-          <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a></li>
+          <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a>
+<ul id="subnav">
+<li><a href="brokerage.html">BROKERAGE</a></li>
+<li class="sub-2"><a href="development.html">DEVELOPMENT</a></li>
+<li class="sub-3"><a href="management.html">MANAGEMENT</a></li>
+</ul>
+          </li>
           <li class="nav-item-3"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
 
