--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
     <link href="css/style.css" type="text/css" rel="stylesheet">
     <link href="css/fonts/stylesheet.css" type="text/css" rel="stylesheet">
 
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+<link rel="manifest" href="favicon/site.webmanifest">
+<link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
     <script src="https://unpkg.com/scrollreveal"></script>
         <script src="js/animate.js"></script>
+
+
 
 
     <title>Burns Scalo Real Estate</title>
