--- a/portfolio-beacon.html
+++ b/portfolio-beacon.html
@@ -154,7 +154,7 @@ Beacon I is the first Class-A office development inside Abele Business Park. Its
 
 <div class="link-container col-10 offset-1">
 
-  <a href="#" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
+  <a href="https://www.loopnet.com/Listing/44-Abele-Rd-Bridgeville-PA/6313756/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
 </a>
 
