--- a/portfolio-riviera.html
+++ b/portfolio-riviera.html
@@ -144,17 +144,19 @@ Your browser does not support the video tag.
 
   <h2 class="col-10 offset-1">
 <span class="green-underline">THE RIVIERA</span></h2>
-<h3 class="col-12 offset-1">80,000 SF</h3>
+<h3 class="col-12 offset-1">South Oakland, 160,000 SF</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-Beacon I is the first Class-A office development inside Abele Business Park. Its 80,000 square-feet are wrapped in floor-to-ceiling glass windows and topped with solar panels, making Beacon I an exquisite combination of modern design and innovative function in office space. Tenants enjoy outdoor meeting areas, natural walking trails with fitness stations and proximity to The Piazza for lunch, and TopGolf for some happy hour fun. The project was completed in March 2018.
+  This 6-floor, 160,000 square-foot gem of the Life Sciences hub of the Pittsburgh Innovation District. Its proximity to The University of Pittsburgh and Carnegie Mellon University has attracted some of the world’s most innovative and pioneering research minds and organizations.
+   <br><br>
+  The building offers breathtaking views of Downtown and the Southside Marina along the river. The Rivera also features a first-floor health & wellness experience, including an exclusive 2,000 square-foot fitness center, outdoor “zen deck” with connected greenspace, and a chic coffee shop and eatery operated by DeFer Coffee and Tea.
 </p>
 
 
 <div class="link-container col-10 offset-1">
 
-  <a href="#" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
+  <a href="https://www.loopnet.com/Listing/350-Technology-Dr-Pittsburgh-PA/9669869/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
 </a>
 
