--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Your browser does not support the video tag.
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1"><span class="delay-1">Shaping</span><br><span class="delay-2">spaces</span> <span class="delay-3">that</span><br><span class="green-underline delay-4">shape lives.</span></h1>
+<h1 class="col-10 offset-1"><span class="delay-1">Shaping</span><br><span class="delay-2">spaces</span> <span class="delay-3">that</span><br><span class="green-underline delay-4">shape lives</span></h1>
         </section>
 
 
