--- a/management.html
+++ b/management.html
@@ -123,18 +123,18 @@ Your browser does not support the video tag.
 
 
 <section class="featured-projects col-12 col-lg-10 offset-lg-1" id="featured-projects">
+<div class="col-12" id="restart">
 
   <p class="small-headline col-6">
-  FEATURED PROJECTS
+BSREstart: Reopen. Responsibly
   </p>
 
 <div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
   <div class="portfolio-list col-12 float-left">
     <a href="#">
-      <div class="col-12 p-0 portfolio-image-container">
-  <img src="assets/images/portfolio/riviera.png" alt="#">
-  </div>
-<h3>THE RIVIERA</h3>
+
+<h3>ONE TIME<br><span class="green-underline">PACKAGE</span></h3>
+<p>Fogging, branded social-distancing tools and signage, self-cleaning device covers and more.</p>
 </a>
 </div>
 </div>
@@ -143,10 +143,10 @@ Your browser does not support the video tag.
 <div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="#">
-    <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/visionedit.png" alt="#">
-</div>
-<h3>THE VISION</h3>
+
+<h3>SUBSCRIPTION-<br><span class="turquoise-underline">BASED PACKAGE</span></h3>
+
+<p>Fogging on a continual basis, hand sanitizer kiosk, social-distancing tools and signage, and self-cleaning device covers and more, all with scheduled maintenance.</p>
 </a>
 </div>
 </div>
@@ -154,21 +154,24 @@ Your browser does not support the video tag.
 <div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="#">
-    <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/diamond.png" alt="#">
-</div>
-<h3>DIAMOND RIDGE</h3>
+
+<h3>NEED A CUSTOM<br><span class="orange-underline">PACKAGE?</span></h3>
+<p>Hand-select from our catalog of individual and premium options that will help your team reopen responsibly.</p>
+
 </a>
 </div>
 </div>
 
+
+
+
+</div>
 
 <div class="link-container col-10 col-md-8 col-xl-4 offset-1 offset-md-2 offset-xl-0">
-  <a href="portfolio.html" class="link-outline col-12"><p class="col-10">SEE ALL PROJECTS</p>
+  <a href="portfolio.html" class="link-outline col-12"><p class="col-10">LEARN MORE</p>
   <img src="assets/arrow.svg" alt="#" class="col-2">
   </a>
 </div>
-
 </section>
 
 
