--- a/what-we-do.html
+++ b/what-we-do.html
@@ -82,7 +82,7 @@ Your browser does not support the video tag.
 
 
 
-<h1 class="col-10 offset-1"><span class="delay-1">We</span> <span class="delay-2">are</span><br><span class="delay-3">market</span><br><span class="orange-underline delay-4">makers.</span></h1>
+<h1 class="col-10 offset-1"><span class="delay-1">We</span> <span class="delay-2">are</span><br><span class="delay-3">market</span><br><span class="orange-underline delay-4">makers</span></h1>
 
         </section>
 
