--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ As leaders in all industries continue to search for competitive advantages, they
   </a>
 
   <a href="management.html" class="col-12 border-bottom link-outline-2"><p class="col-10">WHAT IS LUXURY REAL ESTATE</p>
-<img src="assets/arrow.svg" alt="management.html" class="col-2">
+<img src="assets/arrow.svg" alt="what-we-do.html" class="col-2">
     </a>
 </div>
 
