--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ As leaders in all industries continue to search for competitive advantages, they
   <img src="assets/arrow.svg" alt="#" class="col-2">
   </a>
 
-  <a href="management.html" class="col-12 border-bottom link-outline-2"><p class="col-10">WHAT IS LUXURY REAL ESTATE</p>
+  <a href="what-we-do.html" class="col-12 border-bottom link-outline-2"><p class="col-10">WHAT IS LUXURY REAL ESTATE</p>
 <img src="assets/arrow.svg" alt="what-we-do.html" class="col-2">
     </a>
 </div>
