--- a/brokerage.html
+++ b/brokerage.html
@@ -129,7 +129,7 @@ Authentic, consistent, and ambitious. That sums up the core principles of our se
 
 <div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
   <div class="portfolio-list col-12 float-left">
-    <a href="#">
+    <a href="portfolio-riviera.html">
       <div class="col-12 p-0 portfolio-image-container">
   <img src="assets/images/portfolio/riviera.png" alt="#">
   </div>
