--- a/development.html
+++ b/development.html
@@ -133,7 +133,7 @@ We are reimagining the role that a workplace plays in the world so that it can w
 
 <div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
   <div class="portfolio-list col-12 float-left">
-    <a href="#">
+    <a href="portfolio-riviera.html">
       <div class="col-12 p-0 portfolio-image-container">
   <img src="assets/images/portfolio/riviera.png" alt="#">
   </div>
