--- a/portfolio-bentley.html
+++ b/portfolio-bentley.html
@@ -65,11 +65,9 @@
       <section class="col-12" id="container-1">
         <span class="top"></span>
 
-        <video muted autoplay playsinline class="video-background">
-<source src="assets/videos/portfolio/riviera/riviera-hero.mp4" type="video/mp4">
-<source src="movie.ogg" type="video/ogg">
-Your browser does not support the video tag.
-</video>
+
+<img src="assets/images/portfolio/bentley/bentley.png" alt="#" class="video-background">
+
 
 <h1 class="col-10 offset-1"><span class="portfolio-delay-1">THE</span><br><span class="turquoise-underline portfolio-delay-2">BENTLEY</span></h1>
         </section>
@@ -140,12 +138,15 @@ Your browser does not support the video tag.
 <div class="col-12 col-lg-5 col-xl-4">
 
   <h2 class="col-10 offset-1">
-<span class="green-underline">THE RIVIERA</span></h2>
-<h3 class="col-12 offset-1">80,000 SF</h3>
+<span class="green-underline">THE BENTLEY</span></h2>
+<h3 class="col-12 offset-1">Greentree, 44,000 SF</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-Beacon I is the first Class-A office development inside Abele Business Park. Its 80,000 square-feet are wrapped in floor-to-ceiling glass windows and topped with solar panels, making Beacon I an exquisite combination of modern design and innovative function in office space. Tenants enjoy outdoor meeting areas, natural walking trails with fitness stations and proximity to The Piazza for lunch, and TopGolf for some happy hour fun. The project was completed in March 2018.
+  Located in Pittsburgh’s Parkway West office market, this 4-story 44,000 square-foot development is a head-turner. Its 3-story glass bump-out feature over-looking I-376 surrounded by a dynamic LED lighting system has made The Bentley an architectural icon for those making the commute into Pittsburgh.
+  <br><br>
+  This highly accessible development is only a 3-minute drive into Pittsburgh and a 15-minute drive to Pittsburgh International Airport. The Bentley is filled with unique amenities on each of its four floors, including a cutting-edge fitness center, and fully equipped kitchens and cafés.
+
 </p>
 
 
