--- a/portfolio-riviera.html
+++ b/portfolio-riviera.html
@@ -144,7 +144,7 @@ Your browser does not support the video tag.
 
   <h2 class="col-10 offset-1">
 <span class="green-underline">THE RIVIERA</span></h2>
-<h3 class="col-12 offset-1">South Oakland, 160,000 SF</h3>
+<h3 class="col-12 offset-1">South Oakland | 160,000 SF</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
