--- a/portfolio.html
+++ b/portfolio.html
@@ -131,14 +131,14 @@
             <img src="assets/images/portfolio/bentley.png" alt="#">
             </div>
             <h3>THE BENTLEY</h3>
-            <p>Green Tree</p>
+            <p>Greentree</p>
             </a>
             </div>
           </li>
 
             <li class="west mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="#">
+              <a href="portfolio-boardwalk.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/portfolio/boardwalk.png" alt="#">
             </div>
@@ -153,7 +153,7 @@
 
             <li class="west current mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="#">
+              <a href="portfolio-diamond-ridge.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/portfolio/diamond.png" alt="#">
             </div>
@@ -165,7 +165,7 @@
 
             <li class="south current mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="#">
+              <a href="portfolio-piazza.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/portfolio/piazza.png" alt="#">
             </div>
@@ -189,7 +189,7 @@
 
             <li class="central current mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="#">
+              <a href="portfolio-vision.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/portfolio/visionedit.png" alt="#">
             </div>
