--- a/portfolio-beacon.html
+++ b/portfolio-beacon.html
@@ -144,7 +144,7 @@ Your browser does not support the video tag.
 
   <h2 class="col-10 offset-1">
 <span class="green-underline">BEACON I</span></h2>
-<h3 class="col-12 offset-1">South Fayette, 80,000 SF</h3>
+<h3 class="col-10 offset-1">South Fayette | 80,000 SF</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
