--- a/portfolio-bentley.html
+++ b/portfolio-bentley.html
@@ -139,7 +139,7 @@
 
   <h2 class="col-10 offset-1">
 <span class="green-underline">THE BENTLEY</span></h2>
-<h3 class="col-12 offset-1">Greentree, 44,000 SF</h3>
+<h3 class="col-10 offset-1">Greentree | 44,000 SF</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
