--- a/portfolio-vision.html
+++ b/portfolio-vision.html
@@ -65,11 +65,7 @@
       <section class="col-12" id="container-1">
         <span class="top"></span>
 
-        <video muted autoplay playsinline class="video-background">
-<source src="assets/videos/portfolio/beacon/beacon-hero.mp4" type="video/mp4">
-<source src="movie.ogg" type="video/ogg">
-Your browser does not support the video tag.
-</video>
+<img src="assets/images/portfolio/vision/vision.png" alt="#" class="video-background">
 
 <h1 class="col-10 offset-1"><span class="portfolio-delay-1">THE</span><br><span class="turquoise-underline portfolio-delay-2">VISION</span></h1>
 
