--- a/portfolio.html
+++ b/portfolio.html
@@ -201,7 +201,7 @@
 
             <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="#">
+              <a href="portfolio-zenith.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/portfolio/zenith.png" alt="#">
             </div>
