--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@ Our approach is informed by human values—namely, a desire for health and happi
 
 <section class="featured-projects col-12 col-lg-10 offset-lg-1" id="featured-projects">
 
-<p class="small-headline col-6">
+<p class="small-headline col-10 offset-2 offset-lg-0">
 FEATURED PROPERTIES
 </p>
 
-<div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
+<div class="container-p col-8 col-md-6 col-lg-4 offset-2 offset-md-3 offset-lg-0 float-left">
   <div class="portfolio-list col-12 float-left">
     <a href="portfolio-riviera.html">
       <div class="col-12 p-0 portfolio-image-container">
@@ -163,7 +163,7 @@ FEATURED PROPERTIES
 </div>
 
 
-<div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
+<div class="container-p col-8 col-md-6 col-lg-4 offset-2 offset-md-3 offset-lg-0 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
@@ -174,7 +174,7 @@ FEATURED PROPERTIES
 </div>
 </div>
 
-<div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
+<div class="container-p col-8 col-md-6 col-lg-4 offset-2 offset-md-3 offset-lg-0 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
