--- a/who-we-are.html
+++ b/who-we-are.html
@@ -44,15 +44,22 @@
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
       <ul class="main-nav col-8 col-lg-6 col-xl-6 offset-2 offset-xl-2">
           <li class="nav-item-1" id="active"><a href="who-we-are.html">WHO WE ARE</a></li>
-          <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a>
 
-            <ul id="subnav">
+          <li class="nav-item-2 d-xl-none"><a>WHAT WE DO</a>
+            <ul id="subnav-mobile">
             <li><a href="brokerage.html">BROKERAGE</a></li>
             <li class="sub-2"><a href="development.html">DEVELOPMENT</a></li>
             <li class="sub-3"><a href="management.html">MANAGEMENT</a></li>
             </ul>
           </li>
 
+          <li class="nav-item-2 d-none d-xl-block"><a href="what-we-do.html">WHAT WE DO</a>
+            <ul id="subnav">
+            <li><a href="brokerage.html">BROKERAGE</a></li>
+            <li class="sub-2"><a href="development.html">DEVELOPMENT</a></li>
+            <li class="sub-3"><a href="management.html">MANAGEMENT</a></li>
+            </ul>
+          </li>
 
           <li class="nav-item-3"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
