--- a/index.html
+++ b/index.html
@@ -122,15 +122,9 @@ As leaders in all industries continue to search for competitive advantages, they
 </section>
 
 
-<section class="col-12 p-0 d-xl-none" id="push-mobile">
-<img src="assets/images/push-1.svg" alt="#">
-</section>
-
-
-
 <section class="col-12 p-0 d-xl-none" id="push-1-pt2-mobile">
-
-  <div class="reveal-container col-10 col-md-8 col-lg-3 offset-1 offset-md-2">
+  <img src="assets/images/push-1.png" alt="#" class="col-12">
+<div class="col-10 offset-1">
   <h2 class="col-12">
 PUTTING<br>PEOPLE<br><span class="turquoise-underline">FIRST</span>
     </h2>
@@ -138,9 +132,10 @@ PUTTING<br>PEOPLE<br><span class="turquoise-underline">FIRST</span>
     <p class="col-12">
 Our approach is informed by human values—namely, a desire for health and happiness—and adheres to the principle that the workplace creates a framework for life. We ensure that helpful amenities are always within reach and conceive communities where people can interact. Keeping people’s minds fresh and sharp, while providing them with a stimulating stage to play out their lives.
   </p>
-
-
 </div>
+
+
+
 
 </section>
 
