--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@ As leaders in all industries continue to search for competitive advantages, they
 
 <section class="col-12 p-0 d-xl-none" id="push-1-pt2-mobile">
   <img src="assets/images/push-1.png" alt="#" class="col-12">
-<div class="col-10 offset-1">
+<div class="col-10 col-md-8 offset-1 offset-md-2">
   <h2 class="col-12">
-PUTTING<br>PEOPLE<br><span class="turquoise-underline">FIRST</span>
+PUTTING<br><span class="turquoise-underline">PEOPLE FIRST</span>
     </h2>
 
     <p class="col-12">
