--- a/what-we-do.html
+++ b/what-we-do.html
@@ -74,7 +74,7 @@ Your browser does not support the video tag.
 </video>
 
 <video muted autoplay playsinline class="video-background d-lg-none">
-<source src="assets/videos/home-mobile.mp4" type="video/mp4">
+<source src="assets/videos/what-we-do-mobile.mp4" type="video/mp4">
 <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
@@ -131,24 +131,16 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 
 
 
-
-
-
-<section class="zoom-1 col-12 p-0 d-xl-none" id="push-3-mobile">
-<img src="assets/images/push-3.svg" alt="#">
-</section>
-
-
-
-<section class="col-12 p-0 d-xl-none" id="push-3-pt2-mobile">
-
-  <div class="reveal-container col-10 col-lg-3 offset-1">
+<section class="col-12 p-0 d-xl-none" id="push-1-pt2-mobile">
+  <img src="assets/images/push-1.png" alt="#" class="col-12">
+<div class="col-10 col-md-8 offset-1 offset-md-2">
   <h2 class="col-12">
 YOUR SPACE<br><span class="turquoise-underline">SETS THE PACE</span>
     </h2>
 
     <p class="col-12">
-Happy employees are productive employees, and productive employees are good for business.  But your space sets the pace. Imagine walking a prospect through a workplace full of creativity, collaboration, and positive energy. A place where it is clear that the employees enjoy their work. These positive vibes lead to more positive feelings for the prospect, which in turn leads to more prospects becoming clients.
+      Happy employees are productive employees, and productive employees are good for business.  But your space sets the pace. Imagine walking a prospect through a workplace full of creativity, collaboration, and positive energy. A place where it is clear that the employees enjoy their work. These positive vibes lead to more positive feelings for the prospect, which in turn leads to more prospects becoming clients.
+
 </p>
 </div>
 
