--- a/who-we-are.html
+++ b/who-we-are.html
@@ -124,16 +124,11 @@ We are inspired by our past, but more motivated by our future. Our identity was 
 </section>
 
 
-<section class="col-12 p-0 d-xl-none d-xl-none" id="push-mobile">
-<img src="assets/images/push-2.svg" alt="#">
-</section>
-
-
-<section class="col-12 p-0 d-xl-none" id="push-2-pt2-mobile">
-
-  <div class="reveal-container col-10 col-md-8 col-lg-3 offset-1 offset-md-2 d-xl-none">
+<section class="col-12 p-0 d-xl-none" id="push-1-pt2-mobile">
+  <img src="assets/images/push-1.png" alt="#" class="col-12">
+<div class="col-10 col-md-8 offset-1 offset-md-2">
   <h2 class="col-12">
-WHERE<br> WE'RE<br><span class="turquoise-underline">HEADING</span>
+THE FUTURE<br>HOLDS OUR<br><span class="turquoise-underline">PROMISE</span>
     </h2>
 
     <p class="col-12">
