--- a/management.html
+++ b/management.html
@@ -65,8 +65,14 @@
       <section class="col-12" id="container-1">
         <span class="top"></span>
 
-        <video muted autoplay playsinline class="video-background">
+  <video muted autoplay playsinline class="video-background d-none d-lg-block" id="home-hero">
 <source src="assets/videos/management.mp4" type="video/mp4">
+<source src="movie.ogg" type="video/ogg">
+Your browser does not support the video tag.
+</video>
+
+<video muted autoplay playsinline class="video-background d-lg-none">
+<source src="assets/videos/management-mobile.mp4" type="video/mp4">
 <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
