--- a/index.html
+++ b/index.html
@@ -256,7 +256,15 @@ function myFunction() {
 </script>
 
 
+<script>
+function subNav() {
+   var element = document.getElementById("subNavMobile");
+   element.classList.toggle("display-toggle-subnav");
+}
+</script>
 
+
+<!--
 
 <script>
 function subNav() {
@@ -268,7 +276,7 @@ function subNav() {
   }
 }
 </script>
-
+-->
 
 <!-- END DROPDOWN MENU SCRIPT -->
 
