--- a/index.html
+++ b/index.html
@@ -47,9 +47,23 @@
 
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
         <ul class="main-nav col-8 col-lg-6 col-xl-6 offset-2 offset-xl-2">
-          <li class="nav-item-1"><a href="who-we-are.html">WHO WE ARE</a></li>
+          <li class="nav-item-1"><a href="who-we-are.html">WHO WE ARE</a>
+
+            <ul id="subnav1">
+            <li><a href="brokerage.html">BROKERAGE</a></li>
+            <li class="sub-2"><a href="development.html">DEVELOPMENT</a></li>
+            <li class="sub-3"><a href="management.html">MANAGEMENT</a></li>
+            </ul>
+            
+          </li>
+
+<li class="nav-item-2 d-xl-none" id="subnav-1-open"><a onclick="subNav()"><img src="assets/arrow-vertical.svg" alt="#"></a></li>
+
+
+
 
           <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a>
+
             <ul id="subnav">
             <li><a href="brokerage.html">BROKERAGE</a></li>
             <li class="sub-2"><a href="development.html">DEVELOPMENT</a></li>
@@ -70,7 +84,7 @@
           <li class="nav-item-3"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
 
-          <ul class="secondary-nav col-10 col-lg-4 col-xl-4 offset-1 offset-lg-0">
+          <ul class="secondary-nav col-8 col-lg-4 col-xl-4 offset-2 offset-lg-0">
             <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
             <li class="nav-item-5"><a href="#">MEMBERS</a></li>
             </ul>
