--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
 <li class="nav-item-2 d-xl-none" id="subnav-1-open"><a onclick="subNav1()"><img src="assets/arrow-vertical.svg" alt="#"></a></li>
 
-<li class="subnav-mobile-custom">
-  <ul id="subNavMobile1">
+<li class="subnav-mobile-custom" id="subNavMobile1">
+  <ul>
 <li class="sub-1"><a href="brokerage.html">BROKERAGE</a></li>
 <li class="sub-2"><a href="development.html">DEVELOPMENT</a></li>
 </ul>
