--- a/index.html
+++ b/index.html
@@ -48,18 +48,17 @@
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
         <ul class="main-nav col-8 col-lg-6 col-xl-6 offset-2 offset-xl-2">
 
-          <li class="nav-item-1"><a href="who-we-are.html">WHO WE ARE</a>
-
+          <li class="nav-item-1 d-none d-xl-block"><a href="who-we-are.html">WHO WE ARE</a>
             <ul id="subNav1">
             <li><a href="brokerage.html">SUB-PAGE 1</a></li>
             <li class="sub-2"><a href="development.html">SUB-PAGE 2</a></li>
             </ul>
 
           </li>
-
+<li class="nav-item-1 d-xl-none"><a href="who-we-are.html">WHO WE ARE</a></li>
 <li class="nav-item-2 d-xl-none" id="subnav-1-open"><a onclick="subNav1()"><img src="assets/arrow-vertical.svg" alt="#"></a></li>
 
-<li class="subnav-mobile-custom" id="subNavMobile1">
+<li class="subnav-mobile-custom d-block-xl-none" id="subNavMobile1">
   <ul>
 <li class="sub-1"><a href="brokerage.html">BROKERAGE</a></li>
 <li class="sub-2"><a href="development.html">DEVELOPMENT</a></li>
@@ -67,14 +66,14 @@
 </li>
 
 
-          <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a>
+          <li class="nav-item-2 d-none d-xl-block"><a href="what-we-do.html">WHAT WE DO</a>
             <ul id="subnav">
             <li><a href="brokerage.html">BROKERAGE</a></li>
             <li class="sub-2"><a href="development.html">DEVELOPMENT</a></li>
             <li class="sub-3"><a href="management.html">MANAGEMENT</a></li>
             </ul>
   </li>
-
+<li class="nav-item-2 d-block d-xl-none"><a href="what-we-do.html">WHAT WE DO</a></li>
           <li class="nav-item-2 d-xl-none" id="subnav-open"><a onclick="subNav()"><img src="assets/arrow-vertical.svg" alt="#"></a></li>
 
           <li class="subnav-mobile-custom" id="subNavMobile">
