--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
           <li class="nav-item-1 d-none d-xl-block"><a href="who-we-are.html">WHO WE ARE</a>
             <ul id="subNav1">
-            <li><a href="brokerage.html">SUB-PAGE 1</a></li>
-            <li class="sub-2"><a href="development.html">SUB-PAGE 2</a></li>
+            <li><a href="brokerage.html">TEAM</a></li>
+            <li class="sub-2"><a href="development.html">PRESS</a></li>
             </ul>
 
           </li>
@@ -60,8 +60,8 @@
 
 <li class="subnav-mobile-custom d-block-xl-none" id="subNavMobile1">
   <ul>
-<li class="sub-1"><a href="brokerage.html">BROKERAGE</a></li>
-<li class="sub-2"><a href="development.html">DEVELOPMENT</a></li>
+<li class="sub-1"><a href="brokerage.html">TEAM</a></li>
+<li class="sub-2"><a href="development.html">PRESS</a></li>
 </ul>
 </li>
 
