--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
       <h5 class="col-8 col-lg-4">A Luxury Real Estate Firm</h5>
 
 
-      <div class="menu-container col-1 offset-1 d-lg-none">
+      <div class="menu-container col-1 offset-1 offset-md-2 d-lg-none">
       <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
       </div>
 
       </header>
 
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
-        <ul class="main-nav col-8 col-lg-6 col-xl-6 offset-2 offset-xl-2">
+        <ul class="main-nav col-8 col-md-5 col-lg-6 col-xl-6 offset-2 offset-md-4 offset-lg-2 offset-xl-2">
 
           <li class="nav-item-1 d-none d-xl-block"><a href="who-we-are.html">WHO WE ARE</a>
             <ul id="subNav1">
@@ -87,7 +87,7 @@
           <li class="nav-item-3"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
 
-          <ul class="secondary-nav col-8 col-lg-4 col-xl-4 offset-2 offset-lg-0">
+          <ul class="secondary-nav col-8 col-md-5 offset-md-4 col-lg-4 col-xl-4 offset-2 offset-lg-0">
             <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
             <li class="nav-item-5"><a href="#">MEMBERS</a></li>
             </ul>
